# TIFeD

./: README.md  pyproject.toml
CNN/: FedAvg_training.ipynb  Results.ipynb  TIFeD_training.ipynb
CNN/res/dfa/: DFA_weights.npy
CNN/res/features/: test_features.npy
FFNN/: Results.ipynb  TIFeD_training.ipynb
FFNN/res/dfa/: DFA_weights.npy
